Added style changes to login.html

--- a/include/createAccount.html
+++ b/include/createAccount.html
@@ -7,7 +7,7 @@
     <body>
 
         <div id='Content'>
-            <div id='Login_Form'>
+            <div id='Create_Account_Form'>
                 <form>
                     <div><input type='text' placeholder='First Name' required></div>
                     <div><input type='text' placeholder='Last Name' required></div>
