--- a/CSS/createAccount.css
+++ b/CSS/createAccount.css
@@ -8,7 +8,7 @@ body {
 
 #Content {
     display: grid;
-    width: 500px;
+    width: 400px;
     height: 75%;
     grid-template-rows: auto auto;
 
@@ -17,24 +17,24 @@ body {
     border-style: solid;
 }
 
-#Login_Form {
+#Create_Account_Form {
     margin: auto;
     display: grid;
     text-align: center;
     height: auto;
 }
 
-#Login_Form form {
+#Create_Account_Form form {
     display: grid;
     row-gap: 10px;
 }
 
-#Login_Form input {
+#Create_Account_Form input {
     height: 25px;
     width: 200px;
 }
 
-#Login_Form button {
+#Create_Account_Form button {
     height: 30px;
     width: 175px;
 }
