--- a/CSS/createAccount.css
+++ b/CSS/createAccount.css
@@ -10,7 +10,7 @@ body {
     display: grid;
     width: 400px;
     height: 75%;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto 10%;
 
     margin: auto;
 
@@ -61,4 +61,13 @@ body {
     width: 24px;
     height: 21px;
     margin: auto;
+}
+
+#Content h5 {
+    margin: auto;
+}
+
+#Content a {
+    color: black;
+    text-decoration: none;
 }
