--- a/CSS/login.css
+++ b/CSS/login.css
@@ -10,7 +10,7 @@ body {
     display: grid;
     width: 300px;
     height: 40%;
-    grid-template-rows: auto;
+    grid-template-rows: auto 10%;
     margin: auto;
     border-style: solid;
 }
@@ -36,4 +36,13 @@ body {
     height: 30px;
     width: 175px;
     margin: auto;
+}
+
+#Content h5 {
+    margin: auto;
+}
+
+#Content a {
+    color: black;
+    text-decoration: none;
 }
